@@ -1,3 +1,11 @@
+2000-07-26  Dan Winship  <danw@helixcode.com>
+
+	* camel-movemail.c (movemail_external): routine to call an
+	external movemail program.
+	(camel_movemail): Nuke return value, use movemail_external when
+	available and useful, and don't delete "dest" on errors, since
+	it might have started non-empty.
+
 2000-07-26  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* camel-url.c (camel_url_to_string): Should now always prepend a '/'
